<resources>
    <string name="app_name">AutoJobBD</string>
    <string name="register_now">New to here? Register now.</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_tv">Password:</string>
    <string name="email">Email</string>
    <string name="email_tv">Email:</string>
    <string name="name">Name:</string>
    <string name="full_name">Full name</string>
    <string name="father_s_name">Father\'s Name:</string>
    <string name="father_s_name_et">Father\'s Name</string>
    <string name="mother_s_name">Mother\'s Name:</string>
    <string name="mother_s_name_et">Mother\'s name</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="nationality">Nationality:</string>
    <string name="national_id">National ID:</string>
    <string name="nid_number">NID number</string>
    <string name="birth_registration">Birth Registration:</string>
    <string name="optional">Optional</string>
    <string name="passport_number">Passport Number:</string>
    <string name="religion">Religion:</string>
    <string name="marital_status">Marital Status:</string>
    <string name="married">Married</string>
    <string name="single">Single</string>
    <string name="present_address">Present Address:</string>
    <string name="village_town">Village/Town/Road/ House/Flat:</string>
    <string name="district">District:</string>
    <string name="p_s_upazila">P.S/Upazila:</string>
    <string name="post_office">Post Office:</string>
    <string name="enter_here">Enter here</string>
    <string name="postal_code">Postal Code:</string>
    <string name="numbers_only">Numbers only</string>
    <string name="mobile_no">Mobile No.:</string>
    <string name="_0123456789">0123456789</string>
    <string name="confirm_mobile_no">Confirm Mobile No.:</string>
    <string name="mobile_number_again">Mobile number again</string>
    <string name="email_">Email:</string>
    <string name="e_mail">e-mail</string>
    <string name="ssc_or_equivalent_level">SSC or Equivalent Level</string>
    <string name="hsc_or_equivalent_level">HSC or Equivalent Level</string>
    <string name="board">Board:</string>
    <string name="roll">Roll:</string>
    <string name="_123456">123456</string>
    <string name="group">Group:</string>
    <string name="graduation_level">Graduation Level:</string>
    <string name="masters_level">Masters Level:</string>
    <string name="examination">Examination:</string>
    <string name="subject_degree">Subject/Degree:</string>
    <string name="university_institute">University/Institute:</string>
    <string name="result">Result:</string>
    <string name="passing_year">Passing Year:</string>
    <string name="course_duration">Course Duration:</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="professional_experiences">Professional Experiences:</string>
    <string name="designation_post_name">Designation/Post Name:</string>
    <string name="organization_name">Organization Name:</string>
    <string name="strat_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="responsibilities">Responsibilities:</string>
<string-array name="nationality_array">
    <item>Bangladeshi</item>
    <item>Chinese</item>
    <item>Pakistani</item>
    <item>English</item>
</string-array>
    <string-array name="religion_array">
        <item>Islam</item>
        <item>Hinduism</item>
        <item>Buddhists</item>
        <item>Christians</item>
        <item>Animists</item>
    </string-array>
    <string-array name="blank_array">
        <item>Select</item>
    </string-array>
    <string-array name="district_array">
            <item>Select</item>
            <item>Dhaka</item>
            <item>Faridpur</item>
            <item>Gazipur</item>
            <item>Gopalganj</item>
            <item>Jamalpur</item>
            <item>Kishoreganj</item>
            <item>Madaripur</item>
            <item>Manikganj</item>
            <item>Munshiganj</item>
            <item>Mymensingh</item>
            <item>Narayanganj</item>
            <item>Narsingdi</item>
            <item>Netrokona</item>
            <item>Rajbari</item>
            <item>Shariatpur</item>
            <item>Sherpur</item>
            <item>Tangail</item>
            <item>Bogura</item>
            <item>Joypurhat</item>
            <item>Naogaon</item>
            <item>Natore</item>
            <item>Nawabganj</item>
            <item>Pabna</item>
            <item>Rajshahi</item>
            <item>Sirajgonj</item>
            <item>Dinajpur</item>
            <item>Gaibandha</item>
            <item>Kurigram</item>
            <item>Lalmonirhat</item>
            <item>Nilphamari</item>
            <item>Panchagarh</item>
            <item>Rangpur</item>
            <item>Thakurgaon</item>
            <item>Barguna</item>
            <item>Barishal</item>
            <item>Bhola</item>
            <item>Jhalokati</item>
            <item>Patuakhali</item>
            <item>Pirojpur</item>
            <item>Bandarban</item>
            <item>Brahmanbaria</item>
            <item>Chandpur</item>
            <item>Chattogram</item>
            <item>Cumilla</item>
            <item>Coxs Bazar</item>
            <item>Feni</item>
            <item>Khagrachari</item>
            <item>Lakshmipur</item>
            <item>Noakhali</item>
            <item>Rangamati</item>
            <item>Habiganj</item>
            <item>Maulvibazar</item>
            <item>Sunamganj</item>
            <item>Sylhet</item>
            <item>Bagerhat</item>
            <item>Chuadanga</item>
            <item>Jashore</item>
            <item>Jhenaidah</item>
            <item>Khulna</item>
            <item>Kushtia</item>
            <item>Magura</item>
            <item>Meherpur</item>
            <item>Narail</item>
            <item>Satkhira</item>
    </string-array>
    <string-array name="barguna_array">
        <item>Amtali</item>
        <item>Bamna</item>
        <item>Barguna Sadar</item>
        <item>Betagi</item>
        <item>Patharghata</item>
        <item>Taltali</item>
    </string-array>
    <string-array name="barisal_array">
        <item>Agailjhara</item>
        <item>Babuganj</item>
        <item>Bakerganj</item>
        <item>Banari Para</item>
        <item>Gaurnadi</item>
        <item>Hizla</item>
        <item>Barisal Sadar</item>
        <item>Mehendiganj</item>
        <item>Muladi</item>
        <item>Wazirpur</item>
    </string-array>
    <string-array name="bhola_array">
        <item>Bhola Sadar</item>
        <item>Burhanuddin</item>
        <item>Char Fasson</item>
        <item>Daulat Khan</item>
        <item>Lalmohan</item>
        <item>Manpura</item>
        <item>Tazumuddin</item>
    </string-array>
    <string-array name="jalokati_array">
        <item>Jhalokati Sadar</item>
        <item>Kanthalia</item>
        <item>Nalchity</item>
        <item>Rajapur</item>
    </string-array>
    <string-array name="patuakhali_array">
        <item>Bauphal</item>
        <item>Dashmina</item>
        <item>Dumki</item>
        <item>Galachipa</item>
        <item>Kalapara</item>
        <item>Mirzaganj</item>
        <item>Patuakhali Sadar</item>
        <item>Rangabali</item>
    </string-array>
    <string-array name="pirojpur_array">
        <item>Bandaria</item>
        <item>Kawkhali</item>
        <item>Mathbaria</item>
        <item>Nazirpur</item>
        <item>Pirojpur Sadar</item>
        <item>Nesarabad</item>
        <item>Zianagar</item>
    </string-array>
    <string-array name="bandarban_array">
        <item>Alikadam</item>
        <item>Bandarban Sadar</item>
        <item>Lama</item>
        <item>Naikhongchhari</item>
        <item>Rowangchhari</item>
        <item>Ruma</item>
        <item>Thanchi</item>
    </string-array>
    <string-array name="brahmanbaria_array">
        <item>Akhaura</item>
        <item>Banchharampur</item>
        <item>Bijoynagar</item>
        <item>B.Baria Sadar</item>
        <item>Ashuganj</item>
        <item>Kasba</item>
        <item>Nabinagar</item>
        <item>Nasirnagar</item>
        <item>Sarail</item>
    </string-array>
    <string-array name="chandpur_array">
        <item>Chandpur Sadar</item>
        <item>Garidganj</item>
        <item>Haim Char</item>
        <item>Hajiganj</item>
        <item>Kachua</item>
        <item>Matlab Dakshin</item>
        <item>Matlab Uttar</item>
        <item>Shahrasti</item>
    </string-array>
    <string-array name="chattagram_array">
        <item>Anowara</item>
        <item>Bayejid Bostami</item>
        <item>Banshkhali</item>
        <item>Bakalia</item>
        <item>Boalkhali</item>
        <item>Chandanaish</item>
        <item>Chandgaon</item>
        <item>Chittagong Port</item>
        <item>Double Mooring</item>
        <item>Fatikchhari</item>
        <item>Halishahar</item>
        <item>Hathazari</item>
        <item>Kotwali</item>
        <item>Khulshi</item>
        <item>Lohagara</item>
        <item>Mirsharai</item>
        <item>Mirsharai</item>
        <item>Pahartali</item>
        <item>Panchlaish</item>
        <item>Patiya</item>
        <item>Patenga</item>
        <item>Rangunia</item>
        <item>Raozan</item>
        <item>Sandwip</item>
        <item>Satkania</item>
        <item>sitakunda</item>
    </string-array>
    <string-array name="cumilla_array">
        <item>Barura</item>
        <item>Brahman Para</item>
        <item>Burichang</item>
        <item>Chandina</item>
        <item>Chauddagram</item>
        <item>Cumilla Sadar Dakshin</item>
        <item>Daudkandi</item>
        <item>Debidwar</item>
        <item>Homna</item>
        <item>Laksam</item>
        <item>Mohoharganj</item>
        <item>Meghna</item>
        <item>Muradnagar</item>
        <item>Nangalkot</item>
        <item>Titas</item>
        <item>Cumilla Adarsha Sadar</item>
    </string-array>
   <string-array name="coxsbazar_array">
        <item>Chakaria</item>
        <item>Cox s Bazar Sadar</item>
        <item>Kudubdia</item>
        <item>Maheshkhali</item>
        <item>Pekua</item>
        <item>Ramu</item>
        <item>Teknaf</item>
        <item>Ukhia</item>
    </string-array>
    <string-array name="feni_array">
        <item>Chhagalnaiya</item>
        <item>Daganbhuiyan</item>
        <item>Feni Sadar</item>
        <item>Fulgazi</item>
        <item>Parshuram</item>
        <item>Sonagazi</item>
    </string-array>
    <string-array name="khagrachhari_array">
        <item>Dighinala</item>
        <item>Khagrachhari Sadar</item>
        <item>Lakshmichhari</item>
        <item>Mahalchhari</item>
        <item>Manikchhari</item>
        <item>Matiranga</item>
        <item>Panchhari</item>
        <item>Ramgarh</item>
    </string-array>
    <string-array name="lakshmipur_array">
        <item>Kamalnagar</item>
        <item>Lakshmipur Sadar</item>
        <item>Roypur</item>
        <item>Ramganj</item>
        <item>Ramgati</item>
    </string-array>
    <string-array name="noakhali_array">
        <item>Begumganj</item>
        <item>Chatkhil</item>
        <item>Companiganj</item>
        <item>Hatiya</item>
        <item>Kabirhat</item>
        <item>Senbagh</item>
        <item>Sonaimuri</item>
        <item>Subarnachar</item>
        <item>Noakhali Sadar</item>
    </string-array>
</resources>